# aicerberus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aicerberus/: __init__.py  cli.py  engine.py  models.py
aicerberus/scanners/: __init__.py  dependency.py  license.py  model_file.py  sbom.py
tests/: conftest.py  test_cli.py  test_dependency_scanner.py  test_engine.py  test_license_scanner.py  test_model_file_scanner.py  test_models.py  test_sbom.py
