[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicerberus"
version = "0.1.0"
description = "AI supply chain security scanner — scan AI/ML dependencies and model files for CVEs, pickle exploits, and license risks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenForge AI", email = "openforge-ai@proton.me" }]
keywords = [
    "ai-security", "supply-chain-security", "sbom", "ml-security",
    "vulnerability-scanner", "pickle-security", "llm-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "tomli>=2.0; python_version < '3.11'",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "ruff>=0.1",
]

[project.scripts]
cerberus = "aicerberus.cli:main"

[project.urls]
Homepage = "https://github.com/hidearmoon/aicerberus"
Repository = "https://github.com/hidearmoon/aicerberus"
Issues = "https://github.com/hidearmoon/aicerberus/issues"

[tool.hatch.build.targets.wheel]
packages = ["aicerberus"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=aicerberus --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["aicerberus"]
omit = ["tests/*"]
